# CineCPP-Core

./: .gitignore  CMakeLists.txt  README.md
include/: ffmpeg_reader.h  gui.h  input_manager.h  keybinding_engine.h  timeline_engine.h
keymaps/: adobe_premiere.json  affinity.json  davinci_resolve.json
src/: ffmpeg_reader.cpp  gui.cpp  input_manager.cpp  keybinding_engine.cpp  main.cpp  timeline_engine.cpp
tests/: test_input_manager.cpp  test_timeline.cpp
