# AGENT = Agente_02: Eng. Compilacao (cross-compilation, CMake)
# AGENT = Agente_01: Arquiteto Cloud (Alpine provisioning)
cmake_minimum_required(VERSION 3.20)
project(CineCPP VERSION 0.1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -march=x86-64-v3")
find_package(PkgConfig QUIET)
if(PkgConfig_FOUND)
  pkg_check_modules(SDL2 sdl2 QUIET)
  pkg_check_modules(FFMPEG libavformat libavcodec libavutil QUIET)
endif()
add_executable(cinecpp src/main.cpp src/input_manager.cpp src/timeline_engine.cpp src/keybinding_engine.cpp src/ffmpeg_reader.cpp)
target_include_directories(cinecpp PRIVATE include)
if(NOT FFMPEG_FOUND)
  target_compile_definitions(cinecpp PRIVATE CINECPP_NO_FFMPEG)
endif()
if(SDL2_FOUND)
  target_compile_definitions(cinecpp PRIVATE HAS_SDL2)
  target_include_directories(cinecpp PRIVATE ${SDL2_INCLUDE_DIRS})
  target_link_directories(cinecpp PRIVATE ${SDL2_LIBRARY_DIRS})
  target_link_libraries(cinecpp PRIVATE ${SDL2_LIBRARIES})
endif()
if(FFMPEG_FOUND)
  target_compile_definitions(cinecpp PRIVATE HAS_FFMPEG)
  target_include_directories(cinecpp PRIVATE ${FFMPEG_INCLUDE_DIRS})
  target_link_directories(cinecpp PRIVATE ${FFMPEG_LIBRARY_DIRS})
  target_link_libraries(cinecpp PRIVATE ${FFMPEG_LIBRARIES})
endif()
add_executable(test_input_manager tests/test_input_manager.cpp src/input_manager.cpp src/keybinding_engine.cpp)
target_include_directories(test_input_manager PRIVATE include)

add_executable(test_timeline tests/test_timeline.cpp src/timeline_engine.cpp)
target_include_directories(test_timeline PRIVATE include)
